HTML Fixing Spacing (End of Page)

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1199,7 +1199,7 @@ body {
         font-size: 32px;
         line-height: 38px;
         padding-left: 30px;
-        padding-top: 60px;
+        padding-top: 40px;
 
 
     }
@@ -1219,18 +1219,15 @@ body {
         border-top: .5px solid #fff8e8;
         /*padding-bottom: 10px;*/
         width: 85%;
+        margin-top: -10px;
+
     }
 
     .footer {
         font-size: 32px;
         line-height: 38px;
         padding-left: 30px;
-        margin-top: -120px;
-    }
-
-    .playmargin {
-
-        margin-top: -160px;
+        margin-top: -30px;
     }
 
     .heading3 {
@@ -1447,7 +1444,7 @@ body {
     }
 
     .bottomblobrowheight {
-        height: 793px;
+        height: 372px;
     }
 
     .backgroundblobs {
@@ -1457,7 +1454,7 @@ body {
     }
 
     .backgroundblobs2 {
-        background: url(../images/blueblobs2mobile.png);
+        background: url(../images/blueblobs2mobilept2.png);
         background-size: 100% 100%;
         background-position: center;
     }
